# spendahead

./: . cursorignore  .cursorrules  .gitignore  .gitmessage  CHANGELOG.md  README.md  ROADMAP.md  commitlint.config.js  package.json
.husky/: commit-msg  pre-commit
backend/: .pre-commit-config.yaml  README.md  alembic.ini  database_schema.dbml  env.example  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 9be49313cc25_initial_migration.py  ed53c91fcd54_create_complete_database_schema.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  auth.py  health.py
backend/app/core/: __init__.py  config.py  database.py  logging.py  redis.py  security.py  seeds.py
backend/app/dependencies/: __init__.py  auth.py
backend/app/models/: __init__.py  account.py  ai_insight.py  audit_log.py  budget.py  category.py  transaction.py  user.py
backend/app/schemas/: __init__.py  auth.py  base.py
backend/app/services/: __init__.py  auth.py
backend/scripts/: generate_er_diagram.py  setup-linting.sh  setup.sh  setup_database.py  setup_local.sh  test_auth_manual.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_health.py
docs/: AUTHENTICATION.md  AUTHENTICATION_SUMMARY.md  DATABASE_IMPLEMENTATION_SUMMARY.md  DATABASE_SETUP.md  ER_DIAGRAM_GUIDE.md  LINTING_SETUP.md  PRD.md  QUICK_START.md  README.md
frontend/: middleware.ts  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/ai-assistant/: page.tsx
frontend/app/analytics/: page.tsx
frontend/app/auth/login/: page.tsx
frontend/app/auth/reset-password/: page.tsx
frontend/app/auth/signup/: page.tsx
frontend/app/budgets/: page.tsx
frontend/app/categories/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/transactions/: page.tsx
frontend/components/: ai-assistant-chat.tsx  ai-insights.tsx  analytics-header.tsx  analytics-insights.tsx  analytics-summary.tsx  app-sidebar.tsx  budget-categories.tsx  budget-overview.tsx  budget-progress.tsx  budgets-header.tsx  categories-grid.tsx  categories-header.tsx  dashboard-header.tsx  dashboard-layout.tsx  income-vs-expenses.tsx  metrics-cards.tsx  monthly-trend.tsx  quick-actions.tsx  quick-add-transaction.tsx  recent-transactions.tsx  settings-content.tsx  settings-header.tsx  settings-navigation.tsx  settings-tabs.tsx  spending-by-category.tsx  spending-chart.tsx  spending-heatmap.tsx  top-merchants.tsx  transaction-stats.tsx  transactions-filters.tsx  transactions-header.tsx  transactions-table.tsx
frontend/components/auth/: login-form.tsx  reset-password-form.tsx  signup-form.tsx
